--- a/resources/js/Layouts/scrollbar.css
+++ b/resources/js/Layouts/scrollbar.css
@@ -1,3 +1,9 @@
+::-webkit-scrollbar {
+    display:none;
+    width: 5px;
+    background-color: blueviolet;
+}
+
 ::-webkit-scrollbar-track {
     width: 1px !important;
     background-color: aqua !important;
